PBEXENGDQA-4614 add: tests